<resources>
    <string name="app_name">Games Demo</string>
    <string name="open_drawer">Drawer abierto</string>
    <string name="close_drawer">Drawer cerrado</string>

    <string name="wifi_alert">Debes revisar tu conexión a internet</string>
    <string name="service">UpdateService</string>

    <string name="action_settings">Settings</string>

    <string name="home_item">Home</string>
    <string name="productos_item">Productos</string>
    <string name="compras_item">Carrito</string>
    <string name="ordenes_item">Ordenes</string>
    <string name="facturas_item">Facturas</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="log_in_item">Iniciar Sesión</string>
    <string name="configuracion_item">Configuración</string>
    <string name="API_KEY">AIzaSyBQVVc784J6LY1WVmJ2snw_WpqKHgpNfp0</string>
    <string name="config">Configuración</string>

    <string name="edit_user_hint">Correo electrónico</string>
    <string name="edit_pass_hint">Contraseña</string>
    <string name="login_btn">Entrar</string>
    <string name="forget_pass">Olvidé mi contraseña</string>
    <string name="new_user">Crear cuenta nueva</string>

    <string name="user_name">Nombre</string>
    <string name="user_ap_pa">Apellido paterno</string>
    <string name="user_ap_ma">Apellido materno</string>
    <string name="user_tel">Teléfono</string>
    <string name="user_nick">Alias</string>
    <string name="confirm_pass_hint">Confirma tu contraseña</string>
    <string name="config_schedule">Indicanos en que intervalo de tiempo prefieres que busquemos actualizaciones de noticias.</string>
    <string name="schedule_select">No buscar</string>
    <string name="hint_schedule">Intervalo de actualización</string>
    <string name="hint_pages">Paginas de noticias</string>
    <string name="config_pages">Dinos en que paginas prefieres que busquemos tus noticias favoritas.</string>

</resources>
