<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.gamedemo.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/hint_schedule"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <com.gamedemo.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/config_schedule"/>

            <com.gamedemo.custom.CustomTextView
                android:id="@+id/schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/schedule_select"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/gray_rounded"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_color"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <com.gamedemo.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/hint_pages"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <com.gamedemo.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/config_pages"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10dp">

                <FrameLayout
                    android:id="@+id/atomix_check_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/atomix_logo"/>

                    <CheckBox
                        android:id="@+id/atomix_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:checked="true"/>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/lvup_check_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/lvup_logo"/>

                    <CheckBox
                        android:id="@+id/lvup_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:checked="true"/>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>